--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -29,5 +29,5 @@ jobs:
         if: github.ref == 'refs/heads/main'
         with:
           github_token: ${{ secrets.GONJAWAL_TOKEN }}
-          publish_branch: main # if your main branch is `master` use that here.
+          publish_branch: gh-pages # if your main branch is `master` use that here.
           publish_dir: ./public
