--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -1,11 +1,11 @@
 [en]
-  title = "ZDoc"
+  title = "GongJaWal"
   languageName = "English"
   weight = 1
   contentdir = "content/en"
 
 [ko]
-  title = "ZDoc"
+  title = "GongJaWal"
   languageName = "한국어"
   weight = 2
   contentdir = "content/ko"
