--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -11,9 +11,9 @@
   weight = 2
 
 [[main]]
-  identifier = "blog3"
-  name = "Blog3"
-  url = "blog3"
+  identifier = "blog"
+  name = "Blog"
+  url = "blog"
   weight = 3
   
 [[main]]
